objects/ChPBP_opp__c.object
<CustomObject>
    <description>BR-4352 this is junction object to link Opportunities to Channel Partner Business Plan</description>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity_Name__r.StageName)</formula>
        <label>ABB Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Opportunity_Name__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan__c</fullName>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipName>Opportunities_linked_to_Busienss_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Divison__c</fullName>
        <formula>Opportunity_Name__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Award_date__c</fullName>
        <formula>Opportunity_Name__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Award date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunities_linked_to_Busienss_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity_Name__r.Technical_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Opportunity_Name__r.Product_Primary_PG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <label>Opportunity linked to Business Plan</label>
    <nameField>
        <displayFormat>OPP-CHPBP-{0000}</displayFormat>
        <label>Opportunity linked to Busienss Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities linked to Business Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>